--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,7 +2,7 @@
 name = "kerbeiros"
 description = "Kerberos client library"
 version = "0.0.1"
-authors = ["Zer1t0 <Zer1t0@mail.com>"]
+authors = ["Zer1t0 <Zer1t0@hotmail.com>"]
 edition = "2018"
 license = "AGPL-3.0"
 repository = "https://gitlab.com/Zer1t0/kerbeiros"
