--- a/kerbeiros/Cargo.toml
+++ b/kerbeiros/Cargo.toml
@@ -10,6 +10,7 @@ repository = "https://gitlab.com/Zer1t0/kerbeiros"
 
 [dependencies]
 kerberos_ccache = { version = "0.0", path = "../kerberos_ccache"}
+kerberos_crypto = { version = "0.0", path = "../kerberos_crypto"}
 
 red_asn1 = "0.1"
 ascii = "0.9.1"
