--- a/kerberos_ccache/Cargo.toml
+++ b/kerberos_ccache/Cargo.toml
@@ -10,6 +10,8 @@ repository = "https://gitlab.com/Zer1t0/kerbeiros/kerberos_ccache"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+kerberos_constants = { version = "0.0", path = "../kerberos_constants"}
+
 nom = "5"
 
 [dev-dependencies]
