--- a/kerbeiros/Cargo.toml
+++ b/kerbeiros/Cargo.toml
@@ -11,6 +11,7 @@ repository = "https://gitlab.com/Zer1t0/kerbeiros"
 [dependencies]
 kerberos_ccache = { version = "0.0", path = "../kerberos_ccache"}
 kerberos_crypto = { version = "0.0", path = "../kerberos_crypto"}
+kerberos_constants = { version = "0.0", path = "../kerberos_constants"}
 
 red_asn1 = "0.1"
 ascii = "0.9.1"
