--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,5 +5,6 @@ members = [
   "kerberos_ccache",
   "kerberos_asn1",
   "kerberos_crypto",
-  "kerberos_constants"
+  "kerberos_constants",
+  "kerberos_keytab",
 ]
