--- a/kerberos_keytab/Cargo.toml
+++ b/kerberos_keytab/Cargo.toml
@@ -1,10 +1,11 @@
 [package]
 name = "kerberos_keytab"
-version = "0.1.0"
+version = "0.0.1"
 authors = ["Eloy Pérez <zer1t0ps@protonmail.com>"]
 edition = "2018"
+license = "AGPL-3.0"
+repository = "https://gitlab.com/Zer1t0/kerbeiros/kerberos_keytab"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
 nom = "6.0"
