Update to use RustCrypto instead of rust-crypto
The rust-crypto library is unmaintained, and has
been forked as RustCrypto.

Signed-off-by: David Mulder <dmulder@samba.org>

--- a/kerberos_crypto/Cargo.toml
+++ b/kerberos_crypto/Cargo.toml
@@ -14,6 +14,14 @@ kerberos_constants = { version = "0.0", path = "../kerberos_constants"}
 chrono = "0.4"
 rand = "0.6.5"
 md4 = "0.8"
-rust-crypto = "0.2"
 num = "0.2"
 failure = "0.1"
+pbkdf2 = "0.12.2"
+md-5 = "0.10.6"
+hmac = "0.12.1"
+sha-1 = "0.10.1"
+aes = "0.8.4"
+digest = "0.10.7"
+rc4 = "0.1.0"
+ecb = { version = "0.1.2", features = ["alloc"] }
+cbc = { version = "0.1.2", features = ["alloc"] }
