--- a/kerberos_asn1/Cargo.toml
+++ b/kerberos_asn1/Cargo.toml
@@ -1,14 +1,14 @@
 [package]
-name = "kerberos_asn1"
+name = "himmelblau_kerberos_asn1"
 description = "Parse/Build Kerberos ASN1 DER To/From Rust structs"
-version = "0.2.1"
-authors = ["Eloy <zer1t0ps@protonmail.com>"]
-edition = "2018"
-license = "AGPL-3.0"
-repository = "https://gitlab.com/Zer1t0/kerbeiros"
+version.workspace = true
+authors.workspace = true
+edition.workspace = true
+license.workspace = true
+repository.workspace = true
 
 [dependencies]
-kerberos_constants = { version = "0.0", path = "../kerberos_constants"}
+himmelblau_kerberos_constants = { workspace = true }
 
 red_asn1 = "0.3"
 red_asn1_derive = "0.2"
