--- a/kerberos_ccache/Cargo.toml
+++ b/kerberos_ccache/Cargo.toml
@@ -1,17 +1,15 @@
 [package]
-name = "kerberos_ccache"
+name = "himmelblau_kerberos_ccache"
 description = "Library to parse ccache kerberos structures"
-version = "0.0.7"
-authors = ["Eloy Perez <zer1t0ps@protonmail.com>"]
-edition = "2018"
-license = "AGPL-3.0"
-repository = "https://gitlab.com/Zer1t0/kerbeiros/kerberos_ccache"
-
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+version.workspace = true
+authors.workspace = true
+edition.workspace = true
+license.workspace = true
+repository.workspace = true
 
 [dependencies]
-kerberos_constants = { version = "0.0", path = "../kerberos_constants"}
-kerberos_asn1 = { version = "0.2", path = "../kerberos_asn1"}
+himmelblau_kerberos_constants = { workspace = true }
+himmelblau_kerberos_asn1 = { workspace = true }
 
 failure = "0.1"
 failure_derive = "0.1"
