--- a/kerberos_keytab/Cargo.toml
+++ b/kerberos_keytab/Cargo.toml
@@ -1,18 +1,17 @@
 [package]
-name = "kerberos_keytab"
+name = "himmelblau_kerberos_keytab"
 description = "Library to parse keytab kerberos files"
-version = "0.0.2"
-authors = ["Eloy Pérez <zer1t0ps@protonmail.com>"]
-edition = "2018"
-license = "AGPL-3.0"
-repository = "https://gitlab.com/Zer1t0/kerbeiros/kerberos_keytab"
-
+version.workspace = true
+authors.workspace = true
+edition.workspace = true
+license.workspace = true
+repository.workspace = true
 
 [dependencies]
 nom = "6.2.2"
 
 [dev-dependencies]
-kerberos_constants = { version = "0.0", path = "../kerberos_constants"}
+himmelblau_kerberos_constants = { workspace = true }
 
 [lints.clippy]
 needless_return = "allow"
