Include dependency workspace versions
These are mandatory for publishing.

Signed-off-by: David Mulder <dmulder@samba.org>

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,7 +16,7 @@ license = "AGPL-3.0"
 repository = "https://github.com/himmelblau-idm/kerbeiros"
 
 [workspace.dependencies]
-himmelblau_kerberos_asn1 = { path = "./kerberos_asn1" }
-himmelblau_kerberos_ccache = { path = "./kerberos_ccache" }
-himmelblau_kerberos_crypto = { path = "./kerberos_crypto" }
-himmelblau_kerberos_constants = { path = "./kerberos_constants" }
+himmelblau_kerberos_asn1 = { version = "0.4.0", path = "./kerberos_asn1" }
+himmelblau_kerberos_ccache = { version = "0.4.0", path = "./kerberos_ccache" }
+himmelblau_kerberos_crypto = { version = "0.4.0", path = "./kerberos_crypto" }
+himmelblau_kerberos_constants = { version = "0.4.0", path = "./kerberos_constants" }
